--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,47 @@
 async-generator==1.10
 attrs==22.1.0
+blinker==1.6.2
+Brotli==1.0.9
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.0
+click==8.1.6
+colorama==0.4.6
+cryptography==41.0.3
 distlib==0.3.5
 filelock==3.7.1
+Flask==2.3.2
 h11==0.13.0
+h2==4.1.0
+hpack==4.0.0
+hyperframe==6.0.1
 idna==3.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+kaitaistruct==0.10
+MarkupSafe==2.1.3
 mysql-connector-python==8.0.33
 outcome==1.2.0
 platformdirs==2.5.2
+protobuf==3.20.3
+pyasn1==0.5.0
 pycparser==2.21
+pydivert==2.1.0
+pyOpenSSL==23.2.0
+pyparsing==3.1.1
 PySocks==1.7.1
 requests==2.28.1
+selenium==4.11.2
+selenium-wire==5.1.0
 six==1.16.0
+smsactivate==1.5
 sniffio==1.3.0
 sortedcontainers==2.4.0
 trio==0.21.0
 trio-websocket==0.9.2
 urllib3==1.26.10
 virtualenv==20.15.1
+waitress==2.1.2
+Werkzeug==2.3.6
 wsproto==1.2.0
+zstandard==0.21.0
